Replace policies with direct Manager configuration and add Manager logging
Remove the Policies concept entirely (entity, REST API, UI page, tests).
Replace with configurable Manager system prompt and prompt template stored
in ManagerConfigEntity, editable via a new Manager Configuration page with
System Prompt, Prompt Template, and Event History tabs.

Manager now captures full execution logs via ExecutionLogBuilder, stored in
ActivityLogEntity.details. New GET /activity/{id}/log endpoint serves logs.
View Log links appear on manager-evaluated entries in Activity Log and in
the Manager Event History tab.

Also: enhanced action type descriptions for better Manager triage, new
list_github_labels and apply_github_labels tools, Events tab on Project
Detail page, GitHub issue hyperlinks, quarkus-junit artifact rename fix.