@@ -3,12 +3,10 @@ package io.apicurio.axiom.manager;
 import io.apicurio.axiom.core.entities.ActionTypeEntity;
 import io.apicurio.axiom.core.entities.ActorEntity;
 import io.apicurio.axiom.core.entities.EventEntity;
-import io.apicurio.axiom.core.entities.PolicyEntity;
 import io.apicurio.axiom.core.entities.ProjectEntity;
 import io.apicurio.axiom.core.entities.TaskEntity;
 import org.junit.jupiter.api.Test;
 
-import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 
@@ -20,9 +18,8 @@ import static org.junit.jupiter.api.Assertions.*;
 class ManagerPromptBuilderTest {
 
     @Test
-    void testSystemPromptContainsRole() {
-        String prompt = ManagerPromptBuilder.buildSystemPrompt(
-                Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+    void testDefaultSystemPromptContainsRoleDefinition() {
+        String prompt = ManagerPromptBuilder.DEFAULT_SYSTEM_PROMPT;
 
         assertTrue(prompt.contains("Axiom Manager"));
         assertTrue(prompt.contains("create_task"));
@@ -32,53 +29,45 @@ class ManagerPromptBuilderTest {
     }
 
     @Test
-    void testSystemPromptContainsPolicies() {
-        PolicyEntity policy = new PolicyEntity();
-        policy.name = "Auto-tag issues";
-        policy.guideline = "Tag new issues with appropriate labels";
-        policy.actionType = "auto-tag";
-
-        String prompt = ManagerPromptBuilder.buildSystemPrompt(
-                List.of(policy), Collections.emptyList(), Collections.emptyList());
-
-        assertTrue(prompt.contains("Auto-tag issues"));
-        assertTrue(prompt.contains("Tag new issues"));
-        assertTrue(prompt.contains("auto-tag"));
-    }
-
-    @Test
-    void testSystemPromptContainsActionTypes() {
+    void testFormatActionTypes() {
         ActionTypeEntity at = new ActionTypeEntity();
         at.name = "analyze";
         at.executionMode = "actor";
         at.description = "Analyze an issue";
 
-        String prompt = ManagerPromptBuilder.buildSystemPrompt(
-                Collections.emptyList(), List.of(at), Collections.emptyList());
+        String formatted = ManagerPromptBuilder.formatActionTypes(List.of(at));
 
-        assertTrue(prompt.contains("analyze"));
-        assertTrue(prompt.contains("actor"));
-        assertTrue(prompt.contains("Analyze an issue"));
+        assertTrue(formatted.contains("Available Action Types"));
+        assertTrue(formatted.contains("analyze"));
+        assertTrue(formatted.contains("actor"));
+        assertTrue(formatted.contains("Analyze an issue"));
     }
 
     @Test
-    void testSystemPromptContainsActors() {
+    void testFormatActionTypesEmpty() {
+        String formatted = ManagerPromptBuilder.formatActionTypes(Collections.emptyList());
+
+        assertTrue(formatted.contains("No action types configured"));
+    }
+
+    @Test
+    void testFormatActors() {
         ActorEntity actor = new ActorEntity();
         actor.name = "Claude Agent";
         actor.type = "ai-agent";
         actor.description = "AI agent powered by Claude";
         actor.capabilities = "analyze,implement";
 
-        String prompt = ManagerPromptBuilder.buildSystemPrompt(
-                Collections.emptyList(), Collections.emptyList(), List.of(actor));
+        String formatted = ManagerPromptBuilder.formatActors(List.of(actor));
 
-        assertTrue(prompt.contains("Claude Agent"));
-        assertTrue(prompt.contains("ai-agent"));
-        assertTrue(prompt.contains("analyze,implement"));
+        assertTrue(formatted.contains("Available Actors"));
+        assertTrue(formatted.contains("Claude Agent"));
+        assertTrue(formatted.contains("ai-agent"));
+        assertTrue(formatted.contains("analyze,implement"));
     }
 
     @Test
-    void testUserPromptContainsEventDetails() {
+    void testBuildUserPromptSubstitutesPlaceholders() {
         EventEntity event = new EventEntity();
         event.source = "github";
         event.eventType = "issue-created";
@@ -86,18 +75,29 @@ class ManagerPromptBuilderTest {
         event.repository = "Apicurio/axiom";
         event.payload = "{\"action\":\"opened\",\"issue\":{\"title\":\"Test\"}}";
 
+        ActionTypeEntity at = new ActionTypeEntity();
+        at.name = "analyze";
+        at.executionMode = "actor";
+        at.description = "Analyze an issue";
+
+        ActorEntity actor = new ActorEntity();
+        actor.name = "Blinky";
+        actor.type = "ai-agent";
+
         String prompt = ManagerPromptBuilder.buildUserPrompt(
-                event, null, Collections.emptyList());
+                ManagerPromptBuilder.DEFAULT_PROMPT_TEMPLATE,
+                event, List.of(at), List.of(actor), null, Collections.emptyList());
 
         assertTrue(prompt.contains("github"));
         assertTrue(prompt.contains("issue-created"));
         assertTrue(prompt.contains("Apicurio/axiom#42"));
         assertTrue(prompt.contains("\"action\":\"opened\""));
+        assertTrue(prompt.contains("analyze"));
         assertTrue(prompt.contains("No existing project"));
     }
 
     @Test
-    void testUserPromptContainsProjectContext() {
+    void testBuildUserPromptContainsProjectContext() {
         EventEntity event = new EventEntity();
         event.source = "github";
         event.eventType = "comment-added";
@@ -116,7 +116,9 @@ class ManagerPromptBuilderTest {
         task.output = "The issue is in the auth module";
 
         String prompt = ManagerPromptBuilder.buildUserPrompt(
-                event, project, List.of(task));
+                ManagerPromptBuilder.DEFAULT_PROMPT_TEMPLATE,
+                event, Collections.emptyList(), Collections.emptyList(),
+                project, List.of(task));
 
         assertTrue(prompt.contains("Fix login bug"));
         assertTrue(prompt.contains("Idle"));
@@ -134,7 +136,6 @@ class ManagerPromptBuilderTest {
         assertTrue(schema.contains("\"decisions\""));
         assertTrue(schema.contains("\"create_task\""));
         assertTrue(schema.contains("\"confidence\""));
-        // Verify it's parseable JSON
         assertDoesNotThrow(() -> new com.fasterxml.jackson.databind.ObjectMapper().readTree(schema));
     }
 }
